[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "primefire"
version = "0.1.0"
description = "Autonomous trading framework (private)."
authors = [{name = "Your Name"}]
license = {text = "Proprietary"}
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "pydantic>=2.7.4",
    "rich>=13.7.1",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "plotly>=5.22.0",
    "scikit-learn>=1.4.2",
    "SQLAlchemy>=2.0.30",
    "ta-lib-bin @ https://github.com/cgohlke/talib-build/releases/download/v0.4.28/TA_Lib-0.4.28-cp311-cp311-manylinux_2_28_x86_64.whl ; platform_system=='Linux'",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.2", "ruff>=0.4.7"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "B", "I"]
